--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,3 +246,126 @@
     box-shadow: 0 0 20px rgba(0, 0, 0, 1);
     transition: 1s;
 }
+
+.whychooseus {
+    background-color: #f9f9f6;
+    height: auto;
+    font-family: "Playfair Display", serif;
+}
+
+.whychooseus .row>div {
+    flex-shrink: 1;
+}
+
+.whychooseus .row {
+    flex-wrap: nowrap;
+}
+
+.cover {
+    position: relative;
+    height: 380px;
+    z-index: 1;
+    border-radius: 4px;
+    background-color: #ebebeb;
+    margin-top: 100px;
+}
+
+.coverImg {
+    position: absolute;
+    top: -30px;
+    right: 30px;
+    background-image: url(/assets/images/hair.jpg);
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.choose-text i {
+    color: #bca858;
+    margin-right: 5px;
+}
+
+.choose-text li {
+    font-size: 20px;
+    margin: 20px 0;
+}
+
+.choose-text p,
+.ourworks p {
+    color: #6e6e6e;
+    font-size: 20px;
+}
+
+.choose-text h1 {
+    margin-top: 100px;
+}
+
+.ourworks {
+    height: auto;
+}
+
+.ourworks-photo {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.ourworks-photo .photo {
+    display: flex;
+    flex-direction: column;
+    margin: 0 20px;
+}
+
+.ourworks-photo img {
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.ourworks-text {
+    padding-top: 60px;
+    text-align: center;
+    font-family: "Playfair Display", serif;
+}
+
+.ourworks-text ul {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    font-size: 20px;
+}
+
+.ourworks-text ul li {
+    margin: 0 20px;
+}
+
+.ourworks-text li:hover {
+    color: #bca858;
+    cursor: pointer;
+}
+
+.workview p {
+    font-size: 15px;
+    color: black;
+    padding-top: 5px;
+}
+
+.workview {
+    text-align: center;
+    margin: 20px auto;
+    width: 100%;
+    max-width: 150px;
+    height: 5vh;
+    border: 1px solid black;
+    border-radius: 20px;
+    transition: 1s;
+}
+
+.workview:hover p {
+    color: #ffffff;
+}
